[package]
name = "apocalypse_library_downloader"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive"] }
crossterm = "0.27.0"
futures-util = "0.3.30"
humansize = "2.1.3"
indicatif = { version = "0.17.7", features = ["rayon"] }
once_cell = "1.19.0"
ratatui = "0.27"
rayon = "1.8.0"
reqwest = { version = "0.12", features = ["blocking", "stream", "rustls-tls"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
